Fixed rest of elements for dark mode

--- a/src/plugins/ckeditor/admin/src/components/CKEditorInput/plugins/Callout/Callout.css
+++ b/src/plugins/ckeditor/admin/src/components/CKEditorInput/plugins/Callout/Callout.css
@@ -11,4 +11,5 @@
     font-size: 30px;
     text-align: center;
     letter-spacing: 3px;
+    color:black;
 }
