--- a/src/plugins/ckeditor/admin/src/components/CKEditorInput/plugins/Warning/Warning.css
+++ b/src/plugins/ckeditor/admin/src/components/CKEditorInput/plugins/Warning/Warning.css
@@ -2,6 +2,7 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   background: #fbebd3;
+  color:black;
 }
 
 .ck section.Warning .ck-editor__editable {
